height fix on firefox

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -58,6 +58,7 @@ footer #links a {
   display: table;
   position: absolute;
   min-height: 100%;
+  height:100%;
   width: 100%;
   text-align: center;
   color: #fff;
